# OpenCV_CUDA

./: CMakeLists.txt  README.MD  main.cpp  opencv_cuda.py
